--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,18 @@
 <html>
   <head>
-    <!--Element-elemen tag <head>
-    <title>LAWAN COVID 19</title>
-  </head>
-  <body>
-    <!--Element-elemen tag <body>
-<br>Cara mencegah COVID 19</br>
-<br>1.Cuci Tangan </br>
-<br>2.Memakai masker</br>
-<br>3.Stay at home jika tidak ada kepentingan sangat
-Penting</br>
-<br>4.pola hidup sehat</br>
-<br>5.Berolahraga</br>
-  </body>
+<h3>Cara Menghindari COVID-19</h3>
+  <br>1.Cuci Tangan</br>
+  <br>Salah satu untuk menghindari wabah virus corona adalah cuci tangan.Karena cuci tangan menyebabkan virus virus yeng ada di tangan hilang.</br>
+<div class="footer">
+    <p><center><b><i># 
+ #</i></b></center></p>
+  <h3>Identitas Penulis</h3>
+  <br>Nama: Elsa Ayu W</br>
+  <br>No: 13</br>
+  <br>Kelas:XI H</br>
+<hr style="background-color: #fff;">
+<center>Design by <br>
+  Powered by @elsaayu13
+</div>
+</body>
 </html>
