--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,30 @@
+
 <html>
-  <head>
-<h3>Cara Menghindari COVID-19</h3>
-  <br>1.Cuci Tangan</br>
-  <br>Salah satu untuk menghindari wabah virus corona adalah cuci tangan.Karena cuci tangan menyebabkan virus virus yeng ada di tangan hilang.</br>
-<div class="footer">
-    <p><center><b><i># 
- #</i></b></center></p>
-  <h3>Identitas Penulis</h3>
-  <br>Nama: Elsa Ayu W</br>
-  <br>No: 13</br>
-  <br>Kelas:XI H</br>
-<hr style="background-color: #fff;">
-<center>Design by <br>
-  Powered by @elsaayu13
-</div>
+<head>
+<title>Elsa 13 XIH</title>
+</head>
+<body>
+<table border="1" align="center" width="100%" height="100%">
+<tr>
+<td colspan="2" height="130" align="center" bgcolor="white">
+<font size="12" face="Arial">gejala di minggu pertama infeksi covid19</font>
+</td>
+</tr>
+<tr>
+<td rowspan="6" height="300" bgcolor="black" width="100%">
+<b><i> sumber :alodok</i></b>
+<center><br> Gejala virus covid19 :</br></center>
+      <br>1. demam 38 derajat celcius atau lebih</br>
+      <br>2. Lemas</br>
+      <br>3. batuk tapi tidak berdahak</br>
+      <br>4. pegal-pegal</br>
+      <br>5. Tidak nafsu makan</br>
+      <br>sesak nafas</br>
+      <br>dan jangan lupa untuk berdiam diri dirumah selalu berdoa agar diberi kesehatan, Aamiin</br>
+      <br>
+      <p><center><b><i> #Stayathome</i></b></center></p></br>
+      </td>
+		</tr>	
+	</table>
 </body>
 </html>
